--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
     <title>Frontend Mentor | QR code component</title>
 
@@ -23,10 +18,7 @@
     <!-- Main Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
@@ -35,22 +27,18 @@
           <img src="images/image-qr-code.png" alt="" />
         </div>
         <div class="text">
-          <strong class="heading"
-            >Improve your front-end skills by building projects</strong
-          >
-          <p>
-            Scan the QR code to visit Frontend Mentor and take your coding
-            skills to the next level
-          </p>
+          <h1 class="heading">Improve your front-end skills by building projects</h1>
+          <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
       </div>
-    </div>
-    <div class="attribution">
-      <div>Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
-          Frontend Mentor</a
-        ></div>
-      <div>Coded by <a href="#">Sabry</a></div>
+      <div class="attribution">
+        <div>
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>
+
+          Coded by <a href="#">Sabry</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
